test-cases/final-dump/trait_param_bound_non_trait.wybe
def bad_bound(x:T<:int): T = x
